# meal-planner

./: .dockerignore  .gitignore  Dockerfile  deploy.sh  pyproject.toml  render.yaml
app/: config.py  main.py  models.py  schemas.py
app/routers/: auth.py  events.py  meals.py
static/: app.js  index.html  manifest.json  style.css  sw.js
